k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-export
  labels:
    name: coffee-export
    environment: production
